--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,18 @@
 version: '3.8'
 
 services:
-  db_1:
-    image: postgres:latest
-    restart: always
-    environment:
-      POSTGRES_DB: merchant_db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: 1
+  postgres:
+    image: postgres:16
+    container_name: hackaton_postgres
     ports:
-      - "5433:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-  db_2:
-    image: postgres:latest
-    restart: always
+      - "5434:5432"
     environment:
       POSTGRES_DB: bill_db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: 1
-    ports:
-      - "5433:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    restart: always
 
 volumes:
   pgdata:
