--- a/CRM/pom.xml
+++ b/CRM/pom.xml
@@ -11,6 +11,7 @@
     <groupId>kg.shoro.market</groupId>
     <artifactId>Crm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>Crm</name>
     <url/>
     <licenses>
@@ -28,6 +29,15 @@
     <properties>
         <java.version>21</java.version>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>kg.shoro.shared-dto</groupId>
+                <artifactId>shared-dto</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -83,8 +93,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-liquibase-test</artifactId>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-mapstruct-binding</artifactId>
+            <version>0.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>kg.shoro.shared-dto</groupId>
+            <artifactId>shared-dto</artifactId>
         </dependency>
     </dependencies>
 
