--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -3,14 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>kg.spring.workspace</groupId>
+        <artifactId>workspace</artifactId>
+        <version>1.0</version>
+    </parent>
 
-    <groupId>kg.shoro.shared-dto</groupId>
-    <artifactId>shared-dto</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>kg.spring.shared</groupId>
+    <artifactId>shared</artifactId>
 
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
