--- a/CRM/pom.xml
+++ b/CRM/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>shared</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.14</version>
+        </dependency>
+
 
     </dependencies>
 
