Refactor request DTOs to use shared package and add RabbitMQ service to docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,9 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
-
+  rabbitmq:
+    image: rabbitmq:3.10.7-management
+    ports:
+      - 15672:15672
 volumes:
   pgdata:
