feat(tg):correcting methods to actual dto

--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
     <modules>
         <module>crm</module>
         <module>shared</module>
+        <module>telegram_sevrice</module>
     </modules>
 </project>
