--- a/telegram_sevrice/pom.xml
+++ b/telegram_sevrice/pom.xml
@@ -60,6 +60,17 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>kg.spring.shared</groupId>
+			<artifactId>shared</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>kg.spring.crm</groupId>
+			<artifactId>Crm</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
