Add RabbitMQ configuration and update order handling to publish events

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,13 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
+
   rabbitmq:
     image: rabbitmq:3.10.7-management
     ports:
-      - 15672:15672
+      - "15672:15672"
+      - "5672:5672"
+    restart: always
+
 volumes:
   pgdata:
