--- a/telegram_sevrice/src/main/resources/application.yml
+++ b/telegram_sevrice/src/main/resources/application.yml
@@ -10,3 +10,11 @@ logging:
   level:
     org.springframework.web: DEBUG
     
+spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    template:
+      exchange: crm.exchange
